Fix ProjectPageProps typing
Fix ProjectPageProps typing

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build output
+.next/
+out/
+.vercel/
 
-# testing
-/coverage
+# Vercel preview config
+.vercel/project.json
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
+# Mac system files
+.DS_Store
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# VSCode settings
+.vscode/
+
+# Sanity Studio
+studio/dist/
+studio/node_modules/
+studio/.sanity/
+
+# Optional: lock files if you're using a package manager you're not committing
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
