--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,34 @@
-# Node.js
+# Node modules
 node_modules/
 
-# Build output
+# Next.js build output
 .next/
 out/
-.vercel/
 
-# Vercel preview config
+# Vercel
+.vercel/
 .vercel/project.json
+
+# Sanity Studio
+studio/
+.sanity/
+
+# Environment files
+.env
+.env.*.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Mac system files
+# macOS
 .DS_Store
 
-# VSCode settings
+# VSCode
 .vscode/
 
-# Sanity Studio
-studio/dist/
-studio/node_modules/
-studio/.sanity/
-
-# Optional: lock files if you're using a package manager you're not committing
+# Optional lock files (if you don't commit them)
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
